# Sentiment-Trading-API

./: .env.example  .gitignore  Program Description  README.md  demo_validation.py  pyproject.toml
app/: __init__.py  auth.py  backtest_validation.py  config.py  db.py  main.py  models.py  parameter_optimization.py  regime_adaptive.py  scoring.py  sector_rotation.py  sentiment.py  universe.py
app/services/: alpaca.py  alpha_vantage.py  backtest.py  engine.py  journal.py  market_regime.py  risk.py  walkforward.py
app/static/: app.js  styles.css
app/templates/: backtest.html  base.html  dashboard.html  journal.html  login.html  walkforward.html
firebase-dashboard/: .firebaserc
firebase-dashboard/public/: index.html  performance.html  signals.html  status.html  trades.html
firebase-dashboard/public/css/: styles.css
firebase-dashboard/public/js/: common.js  dashboard.js  firebase-config.js  performance.js  signals.js  status.js  trades.js
firebase-dashboard/scripts/: sync_to_firestore.py
tests/: test_alpha_vantage.py  test_auth.py  test_backtest.py  test_journal.py  test_market_regime.py  test_risk.py  test_scoring.py  test_sentiment.py  test_vol_normalization.py  test_walkforward.py
